<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="559dp"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="447dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/creditsViewText"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/creditsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/creditsText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/betViewText"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/betText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/betText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/winViewText"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/winText"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/winText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="752dp"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium"
                android:showDividers="middle">

                <Button
                    android:id="@+id/bet100Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/betOneButton" />

                <Button
                    android:id="@+id/bet500Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/betTwoButton" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium"
                android:showDividers="middle">

                <Button
                    android:id="@+id/bet1000Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/betTenButton" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium"
                android:showDividers="middle">

                <Button
                    android:id="@+id/newGameButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/newGameButton" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_medium"
            android:showDividers="middle">

            <Button
                android:id="@+id/spinWheelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/startWheelButtonText" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>